# fastapi-langchain-rag-example

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 2026_05_10_1919-666419b8bb99_add_pgvector_extension.py  2026_05_10_2045-8a48c9bcfc31_add_document_chunk.py  2026_05_10_2203-bff0f091ab15_add_hnsw_index_for_document_chunk.py  2026_05_10_2303-6a47f99d9569_768_dim.py  2026_05_10_2310-83b6c3f0bcfe_1024_dim.py
src/: config.py  main.py  tmp.py
src/api/v1/: rag.py
src/core/: db.py
src/core/ai/: ollama.py
src/core/ai/chain/: ollama.py
src/core/ai/documents/: parser.py  text_splitter.py
src/core/ai/embeddings/: hf.py
src/core/ai/llm/: ollama.py
src/core/ai/prompt/: prompt_template.py
src/core/db/: __init__.py  manager.py
src/core/db/models/: __init__.py  document_chunk.py
src/exception/: rag.py
src/repo/: rag.py
src/service/: rag.py
